test/cases/compile_errors/stage1/obj/referring_to_a_struct_that_is_invalid.zig
const UsbDeviceRequest = struct {
    Type: u8,
};

export fn foo() void {
    comptime assert(@sizeOf(UsbDeviceRequest) == 0x8);
}

fn assert(ok: bool) void {
    if (!ok) unreachable;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:10:14: error: reached unreachable code
